<?xml version="1.0" encoding="utf-8"?>
<!--
  ownCloud Android client application

  Copyright (C) 2012  Bartek Przybylski
  Copyright (C) 2015 ownCloud Inc.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical" 
    android:id="@+id/scroll"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/login_logo_background_color"
            android:src="@drawable/nube_junta_verde"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/account_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/auth_username"
            android:inputType="textNoSuggestions"
            android:textColor="@color/login_text_color"
            android:textColorHint="@color/login_text_hint_color"
            android:contentDescription="@string/auth_username"
            />

		<EditText
		    android:id="@+id/account_password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:drawablePadding="5dp"
		    android:ems="10"
		    android:hint="@string/auth_password"
		    android:inputType="textPassword"
            android:textColor="@color/login_text_color"
            android:textColorHint="@color/login_text_hint_color"
		    android:contentDescription="@string/auth_password"
            />
        
        <TextView
            android:id="@+id/auth_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@android:drawable/stat_notify_sync"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/auth_unauthorized"
            android:textColor="@color/login_text_color"
            android:contentDescription="@string/auth_unauthorized"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonOK"
            android:theme="@style/Button.Primary"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            android:text="@string/setup_btn_connect"
            android:contentDescription="@string/setup_btn_connect"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom">

            <Button
                android:id="@+id/terms_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/terms_link_text"
                android:textColor="@color/terms_link_color"
                android:contentDescription="@string/terms_link_text"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>